# toml-scaffold

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TOML_FORMATTING_RULES.md  firekeeper.toml
.github/workflows/: coverage.yml
crates/toml-scaffold/: Cargo.toml
crates/toml-scaffold-macros/: Cargo.toml  README.md
crates/toml-scaffold-macros/src/: lib.rs
crates/toml-scaffold/src/: field_path.rs  format.rs  lib.rs  schema.rs
crates/toml-scaffold/tests/: array_of_tables.rs  basic_value.rs  collections.rs  collections.toml  deeply_nested.rs  deeply_nested.toml  field_with_dot.rs  field_with_dot.toml  format_inline_dotted.rs  format_inline_dotted.toml  format_json_value.rs  format_json_value.toml  format_json_value_child_dotted.toml  format_json_value_nested.toml  format_json_value_nested_cascade.toml  format_multiline_array.rs  format_multiline_array.toml  json_value_field.rs  json_value_field_empty.toml  multiline_doc.rs  multiline_doc.toml  multiline_string_value.rs  multiline_string_value.toml  nested_format_preferences.rs  nested_format_preferences.toml  nested_structs.rs  nested_structs.toml  nested_with_optional.rs  nested_with_optional.toml  nested_with_special_chars.rs  nested_with_special_chars.toml  no_duplicate_section_separator.rs  no_duplicate_section_separator.toml  none_optional.rs  optional_nested_struct.rs  optional_nested_struct_none.toml  optional_nested_struct_some.toml  root_description.rs  root_description.toml  root_doc_with_table.rs  (+3 more)
crates/toml-template/: Cargo.toml
crates/toml-template-macros/: Cargo.toml  README.md
crates/toml-template-macros/src/: lib.rs
crates/toml-template/src/: format.rs  lib.rs  schema.rs
crates/toml-template/tests/: array_of_tables.rs  basic_value.rs  basic_value.toml  collections.rs  deeply_nested.rs  json_value_field.rs  json_value_field.toml  multiline_doc.rs  multiline_string_value.rs  multiline_string_value.toml  nested_structs.rs  none_optional.rs  substring_field_names.rs
crates/toml-template/tests/fixtures/: array_of_tables.toml  none_optional.toml  substring_field_names.toml
