[package]
name = "toml-scaffold-macros"
version = "0.1.0"
edition = "2021"
authors = ["DiscreteTom"]
description = "Procedural macros for toml-scaffold"
license = "MIT"
repository = "https://github.com/DiscreteTom/toml-scaffold"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
