[package]
name = "toml-scaffold"
version = "0.2.1"
edition = "2021"
authors = ["DiscreteTom"]
description = "Generate commented TOML scaffolds from Rust structs and values"
license = "MIT"
repository = "https://github.com/DiscreteTom/toml-scaffold"
readme = "../../README.md"
keywords = ["toml", "scaffold", "config", "serde"]
categories = ["config", "encoding"]

[dependencies]
toml-scaffold-macros = { path = "../toml-scaffold-macros", version = "0.1" }
toml = { version = "0.9", features = ["preserve_order"] }
toml_writer = "1"
serde = "1"
serde_json = "1"
schemars = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
