[package]
name = "toml-template"
version = "0.1.0"
edition = "2021"
authors = ["DiscreteTom"]
description = "Generate commented TOML templates from Rust structs and values"
license = "MIT"
repository = "https://github.com/DiscreteTom/toml-template"
readme = "../../README.md"
keywords = ["toml", "template", "config", "serde"]
categories = ["config", "encoding"]

[dependencies]
toml-template-macros = { path = "../toml-template-macros", version = "0.1" }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

[dev-dependencies]
